--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera, It's a Nice Course!</h1>
+<h1>Hello Coursera, Update Nehemias!</h1>
 </body>
 </html>
