--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>HTML5, CSS3 & JavaScrip!</title>
 </head>
 <body>
-<h1>Hola jefe! estoy es una prueba, actualizado directamente desde comando mediante Github con GIT.</h1>
+<h1>Hello! Como estas</h1>
 </body>
 </html>
